[BE32-1] - refactor code